# shiv-uv-example

./: README.md  build.sh  pyproject.toml
src/shiv_example/: cli.py  mod.py
